--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,6 @@ jobs:
       - name: Create production env
         run: |
           echo "PAGES_BASE_PATH=${{ secrets.PAGES_BASE_PATH }}" >> .env.production
-          # и так далее для всех нужных переменных
       
       - name: Install dependencies
         run: npm ci
@@ -26,7 +25,7 @@ jobs:
       - name: Build and export
         env:
           NODE_ENV: production
-        run: npm run build && npm run export
+        run: npx next build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
